crates/ts-transform/tests/snapshots/snapshot_tests__app_component_js.snap
---
source: crates/ts-transform/tests/snapshot_tests.rs
expression: result
---
import { Component } from '@angular/core';
import { RouterOutlet } from '@angular/router';
import { SharedUtils } from '@app/shared';
import _decorate from '@oxc-project/runtime/helpers/decorate';
let AppComponent = class AppComponent {
	title = SharedUtils.appName();
};
AppComponent = _decorate([Component({
	selector: 'app-root',
	standalone: true,
	imports: [RouterOutlet],
	template: '<h1>{{ title }}</h1><router-outlet />'
})], AppComponent);
export { AppComponent };
