crates/ts-transform/tests/snapshots/snapshot_tests__app_config_js.snap
---
source: crates/ts-transform/tests/snapshot_tests.rs
expression: result
---
import { provideRouter } from '@angular/router';
import { routes } from './app.routes';
export const appConfig = { providers: [provideRouter(routes)] };
