crates/ts-transform/tests/snapshots/snapshot_tests__app_routes_js.snap
---
source: crates/ts-transform/tests/snapshot_tests.rs
expression: result
---
export const routes = [];
