crates/ts-transform/tests/snapshots/snapshot_tests__environment_prod_js.snap
---
source: crates/ts-transform/tests/snapshot_tests.rs
expression: result
---
export const environment = {
	production: true,
	appName: 'simple-app'
};
