crates/ts-transform/tests/snapshots/snapshot_tests__logger_js.snap
---
source: crates/ts-transform/tests/snapshot_tests.rs
expression: result
---
export class Logger {
	static log(message) {
		console.log(message);
	}
}
