crates/ts-transform/tests/snapshots/snapshot_tests__main_js.snap
---
source: crates/ts-transform/tests/snapshot_tests.rs
expression: result
---
import { bootstrapApplication } from '@angular/platform-browser';
import { AppComponent } from './app/app.component';
import { appConfig } from './app/app.config';
bootstrapApplication(AppComponent, appConfig);
