crates/ts-transform/tests/snapshots/snapshot_tests__shared_index_js.snap
---
source: crates/ts-transform/tests/snapshot_tests.rs
expression: result
---
export { SharedUtils } from './utils';
export { Logger } from './logger';
