crates/ts-transform/tests/snapshots/snapshot_tests__utils_js.snap
---
source: crates/ts-transform/tests/snapshot_tests.rs
expression: result
---
import { Logger } from './logger';
import { environment } from '@env/environment';
export class SharedUtils {
	static appName() {
		Logger.log('Getting app name');
		return environment.appName;
	}
}
